fix case study size on mobile

--- a/src/components/subcomponents/ProjectCard.module.scss
+++ b/src/components/subcomponents/ProjectCard.module.scss
@@ -1,3 +1,5 @@
+@import "../../styles/mixins";
+
 .container {
   display: block;
   text-align: center;
@@ -18,5 +20,11 @@
     font-style: normal;
     font-weight: bold;
     margin-bottom: 1.5rem;
+  }
+}
+
+@include mobile() {
+  .container .imageWrap {
+    height: 220px;
   }
 }
